--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,6 @@
 @import url("./estilos/hearder.css");
 @import url("./estilos/banner.css");
+@import url("./estilos/carrosel.css");
 
 
 
@@ -8,6 +9,7 @@
     --cor-cabecalho: #ffffff;
     --titulo-cabecalho: #EB9B00;
     --azul-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37);
+    --cor-texto: red;
 }
 
 body{
